--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <!-- Ícones (para redes sociais / menu) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 
   <!-- CSS externo -->
   <link rel="stylesheet" href="/assets/css/style.css" />
@@ -28,7 +34,27 @@
   <!-- Preloader Auron -->
   <div class="page-loader">
     <div class="loader-logo-wrap">
-      <div class="loader-logo">A</div>
+      <div class="loader-logo">
+        <svg class="auron-logo" viewBox="0 0 64 64" aria-hidden="true">
+          <defs>
+            <linearGradient id="auron-grad-loader" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="#27F5C5" />
+              <stop offset="50%" stop-color="#4C7CFF" />
+              <stop offset="100%" stop-color="#8F5BFF" />
+            </linearGradient>
+          </defs>
+          <rect x="4" y="4" width="56" height="56" rx="18" fill="url(#auron-grad-loader)" />
+          <path
+            d="M20 44 L32 18 L44 44 M24 34 H40"
+            fill="none"
+            stroke="#FFFFFF"
+            stroke-width="3.2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <circle cx="46" cy="18" r="3" fill="#27F5C5" />
+        </svg>
+      </div>
     </div>
 
     <span class="loader-text">Construindo sua experiência digital...</span>
@@ -38,7 +64,27 @@
   <header class="navbar">
     <div class="container navbar-inner">
       <a href="#hero" class="brand">
-        <div class="brand-logo">A</div>
+        <div class="brand-logo">
+          <svg class="auron-logo" viewBox="0 0 64 64" aria-hidden="true">
+            <defs>
+              <linearGradient id="auron-grad-brand" x1="0" y1="0" x2="1" y2="1">
+                <stop offset="0%" stop-color="#27F5C5" />
+                <stop offset="50%" stop-color="#4C7CFF" />
+                <stop offset="100%" stop-color="#8F5BFF" />
+              </linearGradient>
+            </defs>
+            <rect x="4" y="4" width="56" height="56" rx="18" fill="url(#auron-grad-brand)" />
+            <path
+              d="M20 44 L32 18 L44 44 M24 34 H40"
+              fill="none"
+              stroke="#FFFFFF"
+              stroke-width="3.2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <circle cx="46" cy="18" r="3" fill="#27F5C5" />
+          </svg>
+        </div>
         <div>
           <div class="brand-text-main">AURON</div>
           <div class="brand-text-sub">Desenvolvimento Web</div>
