Correção do caminho do endereço do CSS e do JS.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    
+
     <!-- Ícones (para redes sociais / menu) -->
     <link
       rel="stylesheet"
@@ -36,7 +36,7 @@
     />
 
     <!-- CSS externo -->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body class="loading">
     <!-- Preloader Auron -->
@@ -838,6 +838,6 @@
     </footer>
 
     <!-- JS externo -->
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
