Fix stylesheet link path in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     />
 
     <!-- CSS externo -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body class="loading">
     <!-- Preloader Auron -->
